# MeshVault

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  dev.Dockerfile  diesel.toml  docker-compose.dev.yaml  docker-compose.yaml  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  typeshare.toml  vite.config.ts
.cargo/: config.toml
.github/workflows/: main.yaml
backend/: convert.rs  main.rs  parse_library.rs  schema.rs  stream_dl.rs  types.rs  upload.rs
backend/models/: mod.rs
backend/models/files/: generated.rs
backend/models/models/: generated.rs
frontend/: App.tsx  Collections.tsx  EditModel.tsx  FavouriteModels.tsx  Model.tsx  ModelPack.tsx  ModelViewer.tsx  Models.tsx  NotFound.tsx  SearchView.tsx  UploadEditModel.tsx  UploadModel.tsx  index.css
frontend/components/: CollectionDropdown.tsx  mode-toggle.tsx  search.tsx
frontend/components/custom-ui/: spinner.tsx
frontend/components/ui/: dropdown-menu.tsx  input.tsx
frontend/lib/: api.ts
migrations/2024-10-22-185038_create_model/: down.sql  up.sql
migrations/2024-10-22-185038_create_models_and_filles/: down.sql  up.sql
migrations/2024-11-15-113800_create_collections/: down.sql  up.sql
migrations/2025-11-14-184043-0000_add_liked_to_models3d/: down.sql  up.sql
