[package]
name = "meshvault"
version = "0.1.0"
edition = "2021"

default-run = "meshvault"

[[bin]]
name = "meshvault"
path = "backend/main.rs"

[dependencies]
anyhow = "1.0.91"
axum = "0.7.7"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
diesel-async = { version = "0.5.0", features = ["sqlite", "deadpool", "tokio", "bb8", "async-connection-wrapper"] }
diesel_migrations = "2.2.0"
dotenvy = "0.15.7"
envy = "0.4.2"
pathdiff = "0.2.2"
serde = "1.0.213"
serde_derive = "1.0.213"
serde_json = "1.0.132"
sha256 = "1.5.0"
stl-thumb = "0.5.0"
str_slug = "0.1.3"
tokio = { version = "1.41.0", features = ["full"] }
tokio-util = "0.7.12"
tower-http = { version = "0.6.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
typeshare = "1.0.3"
url = "2.5.2"
url_serde = "0.2.0"
uuid = "1.11.0"
walkdir = "2.5.0"
zip = "2.2.0"
