[package]
name = "meshvault"
version = "0.1.0"
edition = "2021"

default-run = "meshvault"

[[bin]]
name = "meshvault"
path = "backend/main.rs"

[dependencies]
anyhow = "1.0.91"
async-stream = "0.3.6"
axum = { version = "0.7.7", features = ["multipart"]}
bytes = "1.8.0"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
diesel-async = { version = "0.5.0", features = ["sqlite", "deadpool", "tokio", "bb8", "async-connection-wrapper"] }
diesel_migrations = "2.2.0"
dotenvy = "0.15.7"
envy = "0.4.2"
fs_extra = "1.3.0"
futures = "0.3.31"
pathdiff = "0.2.2"
sanitize-filename = "0.5.0"
serde = "1.0.213"
serde_derive = "1.0.213"
serde_json = "1.0.132"
sha256 = "1.5.0"
stl-thumb = { git = "https://github.com/fidoriel/stl-thumb.git", branch = "osmesa" }
str_slug = "0.1.3"
tokio = { version = "1.41.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["io"] }
tower-http = { version = "0.6.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
typeshare = "1.0.3"
url = "2.5.2"
url_serde = "0.2.0"
uuid = "1.11.0"
walkdir = "2.5.0"
zip = "2.2.0"
